# rtmaps-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  install_vcpkg.bat  install_vcpkg.sh
.devcontainer/: Dockerfile  devcontainer.json
rtmaps/: CMakeLists.txt  pck.pckinfo
rtmaps/local_interfaces/: maps_template.h
rtmaps/src/: maps_template.cpp
rtmaps/upload_pck/: archive_generation.bat  build_xml_generation.bat
rtmaps/upload_pck/linux/: archive_generation.sh  build_xml_generation.sh  download_pck.sh  ship_pck_to_server.sh
rtmaps/upload_pck/windows/: README.md  archive_generation.bat  build_xml_generation.bat  download_pck.bat  ship_pck_to_sever.bat
scripts/: build.bat  build.sh  install_vcpkg.bat  install_vcpkg.sh
test/: CMakeLists.txt  analysis_tests.py  run_tests_linux.sh  run_tests_windows.bat
